chore: fix spacing on github logo padding on mobile view

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -174,7 +174,7 @@
 
     @media (max-width: 760px) {
       width: 100%;
-      padding-left: 1.5rem;
+      padding-left: 1.5rem !important;
       opacity: 1;
       color: var(--color-neutrals-900);
       margin-bottom: 1rem;
